exercises/02-distributed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-api-service
                port:
                  number: 3000
